[gd_scene load_steps=21 format=3 uid="uid://dsfuy751padsu"]

[ext_resource type="Script" path="res://app/app.gd" id="1_gu4b0"]
[ext_resource type="AudioStream" uid="uid://dofxcqjeghcx3" path="res://app/music.ogg" id="2_crgi3"]
[ext_resource type="Shader" path="res://shaders/ursc/canvas_item/dithering.gdshader" id="2_yu7j4"]
[ext_resource type="Texture2D" uid="uid://b7hkgafa6ytrn" path="res://app/dithering_pattern.png" id="3_6fur4"]
[ext_resource type="PackedScene" uid="uid://cidinjynknws6" path="res://app/models/floor/floor.tscn" id="5_dbvra"]
[ext_resource type="Script" path="res://app/free_camera.gd" id="5_gwqpl"]
[ext_resource type="Script" path="res://app/orbit_camera.gd" id="6_g7xg1"]
[ext_resource type="PackedScene" uid="uid://ckf2xqt5xeowh" path="res://app/models/cube/cube.tscn" id="6_s7kmq"]
[ext_resource type="Shader" path="res://shaders/ursc/canvas_item/fade.gdshader" id="6_wv37t"]
[ext_resource type="PackedScene" uid="uid://bd30icixtw6ri" path="res://app/models/metallic_cube/metallic_cube.tscn" id="7_5fvgl"]
[ext_resource type="Script" path="res://app/fade_overlay.gd" id="7_yqsgr"]
[ext_resource type="PackedScene" uid="uid://dmi53u3776i8f" path="res://app/models/chocolate/chocolate.tscn" id="8_lb2v6"]
[ext_resource type="PackedScene" uid="uid://dnyxuo4xxbsil" path="res://app/models/gem/gem.tscn" id="9_sdmkk"]
[ext_resource type="PackedScene" uid="uid://b1w0fvkt5acam" path="res://app/models/sprite/sprite.tscn" id="10_oofgw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_264vd"]
shader = ExtResource("2_yu7j4")
shader_parameter/color_depth = 24.0
shader_parameter/dithering_pattern_texture = ExtResource("3_6fur4")

[sub_resource type="Environment" id="Environment_5je8s"]
background_mode = 1
ambient_light_source = 2
ambient_light_color = Color(0.752941, 0.752941, 0.752941, 1)
reflected_light_source = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xf6np"]
shader = ExtResource("6_wv37t")
shader_parameter/mode = -1

[sub_resource type="Animation" id="Animation_pig3h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_mqbsh"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2sb81"]
_data = {
"RESET": SubResource("Animation_pig3h"),
"fade": SubResource("Animation_mqbsh")
}

[node name="App" type="Node"]
script = ExtResource("1_gu4b0")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_crgi3")

[node name="SpatialLayer" type="SubViewportContainer" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_264vd")
clip_contents = true
custom_minimum_size = Vector2(640, 360)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
stretch = true
metadata/_edit_lock_ = true

[node name="SubViewport" type="SubViewport" parent="SpatialLayer"]
handle_input_locally = false
snap_2d_transforms_to_pixel = true
snap_2d_vertices_to_pixel = true
canvas_item_default_texture_filter = 0
size = Vector2i(640, 360)
render_target_update_mode = 4

[node name="World" type="Node3D" parent="SpatialLayer/SubViewport"]

[node name="Environment" type="WorldEnvironment" parent="SpatialLayer/SubViewport/World"]
environment = SubResource("Environment_5je8s")

[node name="Sun" type="DirectionalLight3D" parent="SpatialLayer/SubViewport/World"]
transform = Transform3D(0.707107, 0.5, -0.5, 0, 0.707107, 0.707107, 0.707107, -0.5, 0.5, 0, 10, 0)

[node name="FreeCamera" type="Node3D" parent="SpatialLayer/SubViewport/World"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 6)
script = ExtResource("5_gwqpl")

[node name="Camera" type="Camera3D" parent="SpatialLayer/SubViewport/World/FreeCamera"]
current = true

[node name="OrbitCamera" type="Node3D" parent="SpatialLayer/SubViewport/World"]
unique_name_in_owner = true
script = ExtResource("6_g7xg1")
float_enabled = false

[node name="Camera" type="Camera3D" parent="SpatialLayer/SubViewport/World/OrbitCamera"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 3, 5)

[node name="Floor" parent="SpatialLayer/SubViewport/World" instance=ExtResource("5_dbvra")]
unique_name_in_owner = true

[node name="Samples" type="Node3D" parent="SpatialLayer/SubViewport/World"]
unique_name_in_owner = true

[node name="Cube" parent="SpatialLayer/SubViewport/World/Samples" instance=ExtResource("6_s7kmq")]

[node name="MetallicCube" parent="SpatialLayer/SubViewport/World/Samples" instance=ExtResource("7_5fvgl")]
visible = false

[node name="Shinies" type="Node3D" parent="SpatialLayer/SubViewport/World/Samples"]
visible = false

[node name="Chocolate" parent="SpatialLayer/SubViewport/World/Samples/Shinies" instance=ExtResource("8_lb2v6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 1, 0)

[node name="Gem" parent="SpatialLayer/SubViewport/World/Samples/Shinies" instance=ExtResource("9_sdmkk")]
transform = Transform3D(1.00001, 0, 0, 0, 0.707109, -0.707109, 0, 0.707109, 0.707109, 1, 1, 0)

[node name="Sprite" parent="SpatialLayer/SubViewport/World/Samples" instance=ExtResource("10_oofgw")]
visible = false

[node name="PlanarLayer" type="SubViewportContainer" parent="."]
texture_filter = 1
clip_contents = true
custom_minimum_size = Vector2(640, 360)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
stretch = true
metadata/_edit_lock_ = true

[node name="SubViewport" type="SubViewport" parent="PlanarLayer"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
snap_2d_transforms_to_pixel = true
snap_2d_vertices_to_pixel = true
canvas_item_default_texture_filter = 0
size = Vector2i(640, 360)
size_2d_override = Vector2i(640, 360)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="Ui" type="MarginContainer" parent="PlanarLayer/SubViewport"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PlanarLayer/SubViewport/Ui"]
layout_mode = 2

[node name="Title" type="RichTextLabel" parent="PlanarLayer/SubViewport/Ui/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
bbcode_enabled = true
text = "Ultimate Retro Shader Collection [color=#808080][v%s]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="CameraInfo" type="RichTextLabel" parent="PlanarLayer/SubViewport/Ui/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
bbcode_enabled = true
text = "[img]res://app/camera_icon.png[/img] %s
[color=#808080]%s
%s"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Separator" type="Label" parent="PlanarLayer/SubViewport/Ui/VBoxContainer"]
layout_mode = 2

[node name="MenuVisibilityIndicator" type="RichTextLabel" parent="PlanarLayer/SubViewport/Ui/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
bbcode_enabled = true
text = "[color=#808080]%s menu: escape"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Menu" type="VBoxContainer" parent="PlanarLayer/SubViewport/Ui/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Fullscreen" type="Button" parent="PlanarLayer/SubViewport/Ui/VBoxContainer/Menu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 1
toggle_mode = true
text = "Fullscreen: %s"
alignment = 0

[node name="Music" type="Button" parent="PlanarLayer/SubViewport/Ui/VBoxContainer/Menu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 1
toggle_mode = true
text = "Music: %s"
alignment = 0

[node name="FloorToggle" type="Button" parent="PlanarLayer/SubViewport/Ui/VBoxContainer/Menu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 1
toggle_mode = true
text = "Floor: %s"
alignment = 0

[node name="Sample" type="Button" parent="PlanarLayer/SubViewport/Ui/VBoxContainer/Menu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 1
text = "Sample: %s/%s"
alignment = 0

[node name="PixelationIntensity" type="Button" parent="PlanarLayer/SubViewport/Ui/VBoxContainer/Menu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 1
text = "Pixelation intensity: %s"
alignment = 0

[node name="LowColorDepth" type="Button" parent="PlanarLayer/SubViewport/Ui/VBoxContainer/Menu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 1
toggle_mode = true
text = "Low color depth: %s"
alignment = 0

[node name="VertexSnapIntensity" type="Button" parent="PlanarLayer/SubViewport/Ui/VBoxContainer/Menu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 1
text = "Vertex snap intensity: %s"
alignment = 0

[node name="AffineTextureMapping" type="Button" parent="PlanarLayer/SubViewport/Ui/VBoxContainer/Menu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 1
toggle_mode = true
text = "Affine texture mapping: %s"
alignment = 0

[node name="TextureFiltering" type="Button" parent="PlanarLayer/SubViewport/Ui/VBoxContainer/Menu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 1
toggle_mode = true
text = "Texture filtering: %s"
alignment = 0

[node name="Quit" type="Button" parent="PlanarLayer/SubViewport/Ui/VBoxContainer/Menu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
focus_mode = 1
text = "Quit"
alignment = 0

[node name="FadeOverlay" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_xf6np")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)
script = ExtResource("7_yqsgr")
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeOverlay"]
libraries = {
"": SubResource("AnimationLibrary_2sb81")
}

[connection signal="toggled" from="PlanarLayer/SubViewport/Ui/VBoxContainer/Menu/Fullscreen" to="." method="_on_fullscreen_button_toggled"]
[connection signal="toggled" from="PlanarLayer/SubViewport/Ui/VBoxContainer/Menu/Music" to="." method="_on_music_button_toggled"]
[connection signal="toggled" from="PlanarLayer/SubViewport/Ui/VBoxContainer/Menu/FloorToggle" to="." method="_on_floor_button_toggled"]
[connection signal="pressed" from="PlanarLayer/SubViewport/Ui/VBoxContainer/Menu/Sample" to="." method="_on_sample_button_pressed"]
[connection signal="pressed" from="PlanarLayer/SubViewport/Ui/VBoxContainer/Menu/PixelationIntensity" to="." method="_on_pixelation_intensity_button_pressed"]
[connection signal="toggled" from="PlanarLayer/SubViewport/Ui/VBoxContainer/Menu/LowColorDepth" to="." method="_on_low_color_depth_button_toggled"]
[connection signal="pressed" from="PlanarLayer/SubViewport/Ui/VBoxContainer/Menu/VertexSnapIntensity" to="." method="_on_vertex_snap_intensity_button_pressed"]
[connection signal="toggled" from="PlanarLayer/SubViewport/Ui/VBoxContainer/Menu/AffineTextureMapping" to="." method="_on_affine_texture_mapping_button_toggled"]
[connection signal="toggled" from="PlanarLayer/SubViewport/Ui/VBoxContainer/Menu/TextureFiltering" to="." method="_on_texture_filtering_button_toggled"]
[connection signal="pressed" from="PlanarLayer/SubViewport/Ui/VBoxContainer/Menu/Quit" to="." method="_on_quit_button_pressed"]
